tests/typing/bad/testfile-extends-5.scala

class C extends Null {}
object Main { def main(args: Array[String]) { } }
